View Issue Details

IDProjectCategoryView StatusLast Update
0027257Open CASCADEOCCT:Visualizationpublic2022-10-19 15:49
Reporterkgv Assigned Tovpozdyayev 
PrioritylowSeverityfeature 
Status newResolutionopen 
Target Version7.8.0 
Summary0027257: Visualization, TKOpenGl - bind integer vertex attributes
DescriptionFor the moment, OpenGl_VertexBuffer::bindAttribute() calls glVertexAttribPointer() which is designed for float attributes, while glVertexAttribIPointer() should be used for integer attributes.
Steps To ReproduceN/A
TagsNo tags attached.
Test case number

Activities

git

2016-03-14 13:05

administrator   ~0051589

Branch CR27257 has been created by kgv.

SHA-1: 60952ca959866ee37c6d7ecd59d193255e9de6fd


Detailed log of new commits:

Author: kgv
Date: Mon Mar 14 13:05:36 2016 +0300

    0027257: Visualization, TKOpenGl - bind integer vertex attributes

Issue History

Date Modified Username Field Change
2016-03-14 13:02 kgv New Issue
2016-03-14 13:02 kgv Assigned To => kgv
2016-03-14 13:05 git Note Added: 0051589
2016-07-15 19:55 kgv Priority normal => low
2016-10-25 09:34 kgv Target Version 7.1.0 => 7.2.0
2017-07-20 10:50 kgv Target Version 7.2.0 => 7.4.0
2019-09-04 12:48 abv Target Version 7.4.0 => 7.5.0
2020-08-28 14:43 kgv Target Version 7.5.0 => 7.6.0
2021-08-24 14:21 kgv Target Version 7.6.0 => 7.7.0
2022-08-17 11:55 kgv Target Version 7.7.0 => 7.8.0
2022-10-19 15:49 smoskvin Assigned To kgv => vpozdyayev