0027257: Visualization, TKOpenGl - bind integer vertex attributes